--- a/src/styles/constants.sass
+++ b/src/styles/constants.sass
@@ -36,3 +36,6 @@ $color-black: #16181a
 
     @include for-desktop-only
         max-width: 1080px
+
+    @include for-mobile-down
+        max-width: 90%
